// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize keywords knows keywords 1`] = `
Array [
  Object {
    "key": "KEY",
    "position": Object {
      "end": Object {
        "column": 12,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "keyword",
    "value": "Value",
  },
]
`;

exports[`tokenize keywords knows keywords 2`] = `
Array [
  Object {
    "key": "KEY",
    "position": Object {
      "end": Object {
        "column": 20,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "keyword",
    "value": "Another Value",
  },
]
`;

exports[`tokenize keywords knows keywords 3`] = `
Array [
  Object {
    "key": "KEY",
    "position": Object {
      "end": Object {
        "column": 20,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "keyword",
    "value": "value : Value",
  },
]
`;

exports[`tokenize keywords knows these are not keywords 1`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
    "value": "#+KEY : Value",
  },
]
`;

exports[`tokenize keywords knows these are not keywords 2`] = `
Array [
  Object {
    "position": Object {
      "end": Object {
        "column": 13,
        "line": 0,
      },
      "start": Object {
        "column": 0,
        "line": 0,
      },
    },
    "type": "text.plain",
    "value": "#+KE Y: Value",
  },
]
`;
